--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^10.12.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-slideshow-image": "^4.2.1",
     "tailwind-merge": "^1.12.0"
   },
   "devDependencies": {
