--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "tailwind-merge": "^1.12.0"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
